1、本地相册选择界面：添加各图片的选择和取消状态切换，并对当前选择图片的数目绑定监听器，监听当前选择的图片数，从而实现当前"完成（n/9）"按钮文字内容的改变以及按钮状态的切换 2、本地相册选择界面：修改列表图片adapter的逻辑，使第一个位置显示拍照指示图，并指示点击跳转到拍照界面，后序需补充跳转拍照界面功能

--- a/app/src/main/res/layout/activity_local_album.xml
+++ b/app/src/main/res/layout/activity_local_album.xml
@@ -4,6 +4,11 @@
 
     <data>
 
+        <variable
+            name="count"
+            type="Integer">
+
+        </variable>
     </data>
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,19 +29,12 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:titleTextAppearance="@style/Toolbar.TitleText" >
                 <RelativeLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:foregroundGravity="right"
                     android:layout_marginLeft="150dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/fab_margin"
-                        android:layout_centerVertical="true"
-                        android:text="完成(0/9)"
-                        android:textSize="16sp"
-                        android:textColor="@drawable/tv_album_commit"/>
+
                 </RelativeLayout>
                 </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
@@ -64,14 +62,24 @@
                 android:layout_alignParentBottom="true"
                 android:background="#66000000">
                 <TextView
+                    android:id="@+id/tv_preview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/fab_margin"
+                    android:layout_marginLeft="@dimen/fab_margin"
                     android:text="预览"
                     android:textColor="#fff"
                     android:textSize="16sp"/>
+                <TextView
+                    android:id="@+id/tv_commit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/fab_margin"
+                    android:layout_centerVertical="true"
+                    android:text="@{`完成(`+count+`/9)`}"
+                    android:textSize="16sp"
+                    android:textColor="@drawable/tv_album_commit"/>
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
