--- a/app/src/main/res/drawable/tv_album_commit.xml
+++ b/app/src/main/res/drawable/tv_album_commit.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="@color/colorTextLevel3" android:state_selected="false"/>
-    <item android:color="@color/colorTextLevel1" android:state_selected="true"/>
-    <item android:color="@color/colorTextLevel1" android:state_pressed="true"/>
+    <item android:color="#fff" android:state_selected="true"/>
+    <item android:color="#fff" android:state_pressed="true"/>
 </selector>
