--- a/app/src/main/res/layout/item_local_album.xml
+++ b/app/src/main/res/layout/item_local_album.xml
@@ -8,23 +8,36 @@
             type="String"/>
     </data>
     <RelativeLayout
-        android:id="@+id/ll_root"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/rl_pic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv_pic"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#eee"
+                android:localUri="@{uri}"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"/>
+            <ImageView
+                android:id="@+id/iv_select"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_account_check"/>
+        </RelativeLayout>
         <ImageView
-            android:id="@+id/iv_pic"
+            android:id="@+id/iv_take_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#eee"
-            android:localUri="@{uri}"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"/>
-        <ImageView
-            android:id="@+id/iv_select"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_account_check"/>
+            android:visibility="gone"
+            android:background="#eee"/>
     </RelativeLayout>
+
 
 </layout>
