--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -19,6 +19,7 @@
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -29,7 +30,8 @@
 
         <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <android.support.design.widget.AppBarLayout
                 android:id="@+id/appbar"
@@ -50,11 +52,11 @@
                         android:id="@+id/ll_root"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
                         android:background="@color/colorItemNormal"
                         android:orientation="vertical"
-                        android:paddingTop="@dimen/fab_margin"
                         android:paddingBottom="8dp"
-                        android:layout_marginBottom="8dp"
+                        android:paddingTop="@dimen/fab_margin"
                         app:layout_collapseMode="parallax"
                         app:layout_collapseParallaxMultiplier="0.1">
 
@@ -259,7 +261,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
                         app:layout_collapseMode="pin"
-                        app:titleTextAppearance="@style/Toolbar.TitleText"/>
+                        app:titleTextAppearance="@style/Toolbar.TitleText" />
                 </android.support.design.widget.CollapsingToolbarLayout>
 
                 <LinearLayout
@@ -291,10 +293,45 @@
                 <com.codez.collar.ui.CustomViewPager
                     android:id="@+id/viewPager"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"/>
+
             </android.support.v4.widget.NestedScrollView>
 
         </android.support.design.widget.CoordinatorLayout>
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:paddingBottom="8dp"
+                android:paddingLeft="@dimen/fab_margin"
+                android:paddingRight="@dimen/fab_margin"
+                android:paddingTop="8dp"
+                android:background="@color/colorItemNormal">
+
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="添加评论"
+                    android:textColor="@color/colorTextLevel1"
+                    android:textColorHint="@color/colorTextLevel3"
+                    android:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/iv_commit"
+                    android:layout_width="@dimen/toolbar_icon_size"
+                    android:layout_height="@dimen/toolbar_icon_size"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_post_send" />
+            </LinearLayout>
+        </android.support.design.widget.AppBarLayout>
+
     </LinearLayout>
 
 
