--- a/app/src/main/res/layout/item_status.xml
+++ b/app/src/main/res/layout/item_status.xml
@@ -77,6 +77,7 @@
             android:textSize="12sp" />
 
         <ImageView
+            android:id="@+id/iv_more_option"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
@@ -159,7 +160,7 @@
                 android:layout_marginLeft="4dp"
                 android:text="@{``+status.attitudes_count}"
                 android:textColor="@color/colorTextLevel3"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -182,7 +183,7 @@
                 android:layout_marginLeft="4dp"
                 android:text="@{``+status.comments_count}"
                 android:textColor="@color/colorTextLevel3"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -205,7 +206,7 @@
                 android:layout_marginLeft="4dp"
                 android:text="@{``+status.reposts_count}"
                 android:textColor="@color/colorTextLevel3"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
