--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="toolbar_height">45dp</dimen>
     <dimen name="statusbar_height">20dp</dimen>
     <dimen name="toolbar_icon_size">26dp</dimen>
+    <dimen name="item_icon_size">20dp</dimen>
 
     <dimen name="account_item_height">70dp</dimen>
 
