--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -78,7 +78,7 @@
                     android:layout_height="54dp"
                     android:layout_marginLeft="@dimen/fab_margin"
                     android:layout_marginTop="@dimen/fab_margin"
-                    android:src="@drawable/pic_head_test" />
+                    android:imageUrl="@{user.avatar_large}"/>
 
                 <LinearLayout
                     android:id="@+id/ll_info"
@@ -284,8 +284,8 @@
                 android:paddingRight="@dimen/fab_margin">
 
                 <ImageView
-                    android:layout_width="@dimen/toolbar_icon_size"
-                    android:layout_height="@dimen/toolbar_icon_size"
+                    android:layout_width="@dimen/item_icon_size"
+                    android:layout_height="@dimen/item_icon_size"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_mine_theme" />
 
