1、网页界面：新增右上角menu功能菜单，提供复制链接、浏览器打开、刷新三种功能

--- a/app/src/main/res/drawable/progressbar_web.xml
+++ b/app/src/main/res/drawable/progressbar_web.xml
@@ -22,8 +22,8 @@
         <clip>
             <shape>
                 <gradient
-                    android:startColor="@color/colorHighlight"
-                    android:endColor="#fff"/>
+                    android:endColor="@color/colorHighlight"
+                    android:startColor="#fff"/>
             </shape>
         </clip>
     </item>
